--- a/src/PaqGrupo03/FrontEnd/Contenedores2.form
+++ b/src/PaqGrupo03/FrontEnd/Contenedores2.form
@@ -74,7 +74,9 @@
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <hspacer id="d7917">
         <constraints>
