--- a/src/PaqGrupo03/FrontEnd/GestionContenedores.form
+++ b/src/PaqGrupo03/FrontEnd/GestionContenedores.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="Contenedores" layout-manager="GridLayoutManager" row-count="25" column-count="32" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="50" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1728" height="892"/>
+      <xy x="20" y="20" width="1728" height="902"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -387,6 +387,14 @@
         </constraints>
         <properties>
           <text value="Seleccione Hub"/>
+        </properties>
+      </component>
+      <component id="53020" class="javax.swing.JButton" binding="BotonExamen">
+        <constraints>
+          <grid row="17" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Inspeccionar por peso"/>
         </properties>
       </component>
     </children>
